testdata/golden/sema/valid/recursive_indirection.fmt
// scenario: recursive type via array indirection is sized
type Node = { next: Node[] };
