testdata/golden/sema/invalid/alien_hints/rust_attribute_hash.fmt
#[align]
type Foo = { x: int };

